# Calculator

./: .gitignore  CMakeLists.txt  README.md  calculate.cpp  calculate.h  main.cpp  main2.cpp  tests.cpp
